deployments-mode/base/deployment_blue.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grid
  labels:
    app: grid
spec:
  replicas: 5
  selector:
    matchLabels:
      app: grid
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1       
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: grid
        color: blue                
    spec:
      containers:
      - name: app
        image: slickteam/grid:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 1
        resources: {}
