deployments-mode/base/service.yml
kind: Service
apiVersion: v1
metadata:
  name: grid
  labels:
    app: grid
spec:
  selector:
    app: grid
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: NodePort
